# rust-poc-email-sender-sample

./: .gitignore  Cargo.toml  Dockerfile  README.md  logging_config.yaml  logging_config_local.yaml
docker/: docker-compose-local.yaml
src/: lib.rs  main.rs
src/config/: graceful_shutdown.rs  mod.rs
src/constant/: constants.rs
src/controller/: email_controller.rs  health_controller.rs  mod.rs
src/dto/: email.rs  health.rs  mod.rs
src/service/: email_service.rs
